--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="All about Sam Carter">
-    <link rel="'stylesheet" href="reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
+<script src="apps.js"></script>
     <title>It's my page</title>
 </head>
 <body>
+    <nav><p>Welcome to my page, <p id="name"></p></p>
+        <a href="/aboutme-demo/quiz.html" class="button">Play the quiz</a></nav>
     <main class="home-main">
-        <header>
-            <h1 class="hero-heading">This is my life.</h1>
-        </header>
-        <section class="home-main-section">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam architecto odit autem corporis repellendus aliquid quia nam omnis quae facere itaque magnam illum dolorem culpa molestias recusandae, ipsam quidem? Aspernatur ad ullam fugit molestias eaque totam obcaecati corporis quia dolorem hic repellendus dolore aut iusto, odit eos illo suscipit harum esse exercitationem consectetur voluptatum nulla? Ea maxime dolore eligendi suscipit laborum quae cumque nemo vitae repellat! Explicabo molestias eaque accusamus magnam assumenda in obcaecati dolor est! Officia adipisci quibusdam dolorem sapiente, consequatur neque odio praesentium at! Voluptatem soluta officiis ab eligendi laboriosam, impedit, excepturi saepe ea provident nihil ad quis!</p>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit cumque ex illo. Quas qui magnam quam ipsum, nemo sequi enim exercitationem laborum voluptatibus quos harum. Quo accusantium minima deserunt ullam vero fugiat reiciendis laudantium nemo minus perspiciatis. Ratione, nemo. Repellendus quae nam pariatur laborum consectetur culpa labore perferendis esse nihil!</p>
-        </section>
+        <h1 class="hero-heading">About Me</h1>
+ <section class="home-main-section">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto in dolore pariatur enim voluptas rerum repudiandae. Iste unde laboriosam voluptate quae et aliquid ipsum tempore libero, officiis, doloribus tempora nobis quaerat exercitationem suscipit atque velit cupiditate, sunt ea sapiente minus. Tenetur, qui dolorum! Placeat odio veniam temporibus commodi magni in, autem quidem totam aut? Atque doloribus possimus, odit dolor voluptatem, quam quo repudiandae veniam tenetur nesciunt explicabo aut. Alias praesentium numquam molestias tenetur dignissimos dolore modi asperiores libero repudiandae unde! Saepe, dicta modi laboriosam excepturi culpa odio ducimus nobis asperiores, officia animi odit mollitia explicabo quidem. Reprehenderit magni hic reiciendis.</p>
+   
+ 
     </main>
     
 </body>
