--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <main class="home-main">
         <h1 class="hero-heading">About Me</h1>
  <section class="home-main-section">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto in dolore pariatur enim voluptas rerum repudiandae. Iste unde laboriosam voluptate quae et aliquid ipsum tempore libero, officiis, doloribus tempora nobis quaerat exercitationem suscipit atque velit cupiditate, sunt ea sapiente minus. Tenetur, qui dolorum! Placeat odio veniam temporibus commodi magni in, autem quidem totam aut? Atque doloribus possimus, odit dolor voluptatem, quam quo repudiandae veniam tenetur nesciunt explicabo aut. Alias praesentium numquam molestias tenetur dignissimos dolore modi asperiores libero repudiandae unde! Saepe, dicta modi laboriosam excepturi culpa odio ducimus nobis asperiores, officia animi odit mollitia explicabo quidem. Reprehenderit magni hic reiciendis.</p>
+    <p>My name is Sam, I've been on planet earth since 1986 and I hail from London via Watford, but I now live in Cambridgeshire.
+        I enjoy meeting new people and learning new things, in addition to learning to code, I am currently teaching myself to paint tattoo flash
+        and growing tomatoes for the first time.  I have a dog called Eli, he's 4 and very much my little dude.
+    </p>
+    <p>My professional journey has been a rollercoaster so far.  I began working in retail, then followed my love of food into working in kitchens and bakeries.
+        While doing so, I earned a degree in Food Sciences and upon graduation, decided to venture into New Product Development for a large scale bakery.
+        After several succesful and enjoyable years, I experienced a redundancy.</p>
+        <p>My redundancy led me into the Tech industry, where I spent 6 years working in Account Management and Customer Success.  Due to health reasons I relocated from London to Cambridgeshire
+            and took some time away from the world of work to heal and figure out my next move in life.  Which leads me to joining the Full Stack Software Developer Bootcamp with Tech Ed.</p>
+
    
  
     </main>
