added further text, js now working again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap" rel="stylesheet">
-<script src="apps.js"></script>
+<script defer src="apps.js"></script>
     <title>It's my page</title>
 </head>
 <body>
@@ -20,15 +20,33 @@
         <h1 class="hero-heading">About Me</h1>
  <section class="home-main-section">
     <p>My name is Sam, I've been on planet earth since 1986 and I hail from London via Watford, but I now live in Cambridgeshire.
-        I enjoy meeting new people and learning new things, in addition to learning to code, I am currently teaching myself to paint tattoo flash
-        and growing tomatoes for the first time.  I have a dog called Eli, he's 4 and very much my little dude.
+        I enjoy meeting new people and learning new things, in addition to learning to code, I am currently teaching myself to paint tattoo flash and enjoying my first summer of
+        gardening, growing tomatoes, chillies and herbs for the first time currently.  I have a dog called Eli, he's 4 and very much my little dude.
     </p>
     <p>My professional journey has been a rollercoaster so far.  I began working in retail, then followed my love of food into working in kitchens and bakeries.
         While doing so, I earned a degree in Food Sciences and upon graduation, decided to venture into New Product Development for a large scale bakery.
         After several succesful and enjoyable years, I experienced a redundancy.</p>
-        <p>My redundancy led me into the Tech industry, where I spent 6 years working in Account Management and Customer Success.  Due to health reasons I relocated from London to Cambridgeshire
-            and took some time away from the world of work to heal and figure out my next move in life.  Which leads me to joining the Full Stack Software Developer Bootcamp with Tech Ed.</p>
+        <p>My redundancy unexpectedly led me into the Tech industry by chance, where I spent 6 years working in Account Management and Customer Success.  Due to health reasons I relocated from London to Cambridgeshire
+            and took some time away from the world of work to heal and figure out my next move in life.  Which leads me to joining the Full Stack Software Developer Bootcamp with Tech Ed.</p></section>
+<article>
+    <h2>Top 10 Cities I've visited</h2>
+    <br>
+     <ol>New York City</ol>
+<ol>Dublin</ol>
+<ol>Copenhagen</ol>
+<ol>Barcelona</ol>
+<ol>Los Angeles</ol>
+<ol>Hamburg</ol>
+<ol>Venice</ol>
+<ol>Berlin</ol>
+<ol>Edinburgh</ol>
+<ol>Paris</ol></article>
 
+<div class="education">
+    <ul>London SouthBank University - BSc Food Sciences and Nutrition 2008 - 2012</ul>
+    <ul>West Herts College - HND Media Studies 2002 - 2004</ul>
+    <ul>Marlborough School 1997 - 2002</ul>
+</div>
    
  
     </main>
