--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav><p>Welcome to my page, <p id="name"></p></p>
-        <a href="/aboutme-demo/quiz.html" class="button">Play the quiz</a></nav>
+        <a class="button" href="/aboutme-demo/quiz.html">Play the quiz</a></nav>
     <main class="home-main">
         <h1 class="hero-heading">About Me</h1>
  <section class="home-main-section">
