updated dimensions, css for button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <nav><p>Welcome to my page, <p id="name"></p></p>
+        <br>
         <a class="button" href="/aboutme-demo/quiz.html">Play the quiz</a></nav>
     <main class="home-main">
         <h1 class="hero-heading">About Me</h1>
@@ -27,7 +28,8 @@
         While doing so, I earned a degree in Food Sciences and upon graduation, decided to venture into New Product Development for a large scale bakery.
         After several succesful and enjoyable years, I experienced a redundancy.</p>
         <p>My redundancy unexpectedly led me into the Tech industry by chance, where I spent 6 years working in Account Management and Customer Success.  Due to health reasons I relocated from London to Cambridgeshire
-            and took some time away from the world of work to heal and figure out my next move in life.  Which leads me to joining the Full Stack Software Developer Bootcamp with Tech Ed.</p></section>
+            and took some time away from the world of work to heal and figure out my next move in life.  For the past 6 months I've been working as a supply Teaching Assistant at SEN and SEND schools, which has been super rewarding and great fun!  
+            Which then leads me to now, joining the Full Stack Software Developer Bootcamp with Tech Ed.</p></section>
 <article>
     <h2>Top 10 Cities I've visited</h2>
     <br>
@@ -43,7 +45,7 @@
 <ol>Paris</ol></article>
 
 <div class="education">
-    <ul>London SouthBank University - BSc Food Sciences and Nutrition 2008 - 2012</ul>
+    <ul>London South Bank University - BSc Food Sciences and Nutrition 2008 - 2012</ul>
     <ul>West Herts College - HND Media Studies 2002 - 2004</ul>
     <ul>Marlborough School 1997 - 2002</ul>
 </div>
